--- a/subconvert.ini
+++ b/subconvert.ini
@@ -1,3 +1,4 @@
+ruleset=DIRECT,https://raw.githubusercontent.com/godlikeanyone/Rules/master/Correction.list
 ruleset=DIRECT,[]GEOIP,CN
 ruleset=Proxies,[]MATCH
 
