--- a/subconvert.ini
+++ b/subconvert.ini
@@ -1,4 +1,4 @@
-ruleset=Proxies,baidu.com
+ruleset=Proxies,baidu.com,DOMAIN-SUFFIX
 ruleset=DIRECT,https://raw.githubusercontent.com/godlikeanyone/Rules/master/Correction.list
 ruleset=DIRECT,[]GEOIP,CN
 ruleset=Proxies,[]MATCH
