--- a/Rewrite_JS_Remote.conf
+++ b/Rewrite_JS_Remote.conf
@@ -1,10 +1,4 @@
-hostname = api.weibo.cn,mapi.weibo.com,*.uve.weibo.com, biz.caiyunapp.com, api.ithome.com, trade-acs.m.taobao.com, api.m.jd.com, www.wolframalpha.com,api.revenuecat.com
-
-# ---(By yichahucha)---
-# > Weibo - api.weibo.cn,mapi.weibo.com
-^https?://(sdk|wb)app\.uve\.weibo\.com(/interface/sdk/sdkad.php|/wbapplua/wbpullad.lua) url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/wb_launch.js
-^https?://m?api\.weibo\.c(n|om)/2/(statuses/(unread|extend|positives/get|(friends|video)(/|_)(mix)?timeline)|stories/(video_stream|home_list)|(groups|fangle)/timeline|profile/statuses|comments/build_comments|photo/recommend_list|service/picfeed|searchall|cardlist|page|!/(photos/pic_recommend_status|live/media_homelist)|video/tiny_stream_video_list|photo/info|remind/unread_count) url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/wb_ad.js
-# ------
+hostname = biz.caiyunapp.com, api.ithome.com, trade-acs.m.taobao.com, api.m.jd.com, www.wolframalpha.com,api.revenuecat.com
 
 #qq空间广告屏蔽
 ^http:\/\/c\.gdt\.qq\.com\/gdt_clickwap\.fcg\?viewid url reject
